--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "day-1-part-1": "node ./day-1/part-1/",
     "day-1-part-2": "node ./day-1/part-2/",
     "day-2-part-1": "node ./day-2/part-1/",
-    "day-2-part-2": "node ./day-2/part-2/"
+    "day-2-part-2": "node ./day-2/part-2/",
+    "day-3-part-1": "node ./day-3/part-1/",
+    "day-3-part-2": "node ./day-3/part-2/"
   },
   "keywords": [],
   "author": "Godmoded",
