--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "day-3-part-1": "node ./day-3/part-1/",
     "day-3-part-2": "node ./day-3/part-2/",
     "day-4-part-1": "node ./day-4/part-1/",
-    "day-4-part-2": "node ./day-4/part-2/"
+    "day-4-part-2": "node ./day-4/part-2/",
+    "day-5-part-1": "node ./day-5/part-1/",
+    "day-5-part-2": "node ./day-5/part-2/"
   },
   "keywords": [],
   "author": "Godmoded",
